# 3dparty

./: .gitignore  .gitmodules  3dparty.sh  CMakeLists.txt
cmake/3dparty/: assimp.cmake  cpp-httplib.cmake  curl-8.0.1.cmake  freetype-2.12.0.cmake  glad.cmake  glm.cmake  json.cmake  libsndfile-1.2.0.cmake  libuv-1.44.2.cmake  lua.cmake  luabridge.cmake  luasocket.cmake  openal-soft-1.23.0.cmake  sdl.cmake  sdl2_mixer-2.6.3.cmake  sdl2_net-2.2.0.cmake  stb.cmake  tinyxml2.cmake  zlib.cmake
cmake/3dparty/lua/: CMakeLists.txt  Config.cmake.in
cmake/3dparty/luasocket/: CMakeLists.txt  Config.cmake.in
cmake/util/: 3dparty.cmake  common.cmake  variables.cmake
prebuilt/Emscripten/Release/assimp/lib/cmake/assimp-5.2/: assimpTargets.cmake
prebuilt/Emscripten/Release/assimp/lib/pkgconfig/: assimp.pc
prebuilt/Emscripten/Release/glad/lib/cmake/glad/: gladConfig.cmake  gladConfigVersion.cmake  gladTargets-release.cmake  gladTargets.cmake
prebuilt/Emscripten/Release/json/share/pkgconfig/: nlohmann_json.pc
prebuilt/Emscripten/Release/lua/lib/cmake/Lua/: LuaConfig.cmake  LuaConfigVersion.cmake  LuaTargets.cmake
prebuilt/Emscripten/Release/luasocket/lib/cmake/LuaSocket/: LuaSocketConfig.cmake  LuaSocketConfigVersion.cmake  LuaSocketTargets-release.cmake  LuaSocketTargets.cmake
prebuilt/Emscripten/Release/tinyxml2/lib/cmake/tinyxml2/: tinyxml2-config-version.cmake
prebuilt/Emscripten/Release/tinyxml2/lib/pkgconfig/: tinyxml2.pc
prebuilt/Linux/Release/assimp/lib/cmake/assimp-5.2/: assimpTargets-release.cmake  assimpTargets.cmake
prebuilt/Linux/Release/assimp/lib/pkgconfig/: assimp.pc
prebuilt/Linux/Release/cpp-httplib/lib/cmake/httplib/: httplibConfig.cmake  httplibTargets.cmake
prebuilt/Linux/Release/glad/lib/cmake/glad/: gladConfigVersion.cmake
prebuilt/Linux/Release/json/share/pkgconfig/: nlohmann_json.pc
prebuilt/Linux/Release/lua/lib/cmake/Lua/: LuaConfigVersion.cmake  LuaTargets-release.cmake
prebuilt/Linux/Release/luasocket/lib/cmake/LuaSocket/: LuaSocketConfigVersion.cmake
prebuilt/Linux/Release/tinyxml2/lib/pkgconfig/: tinyxml2.pc
prebuilt/Windows/Release/SDL/lib/: SDL2_test.lib  SDL2main.lib
prebuilt/Windows/Release/SDL/lib/pkgconfig/: sdl2.pc
prebuilt/Windows/Release/assimp/lib/: zlibstatic.lib
prebuilt/Windows/Release/assimp/lib/cmake/assimp-5.2/: assimpTargets-release.cmake  assimpTargets.cmake
prebuilt/Windows/Release/assimp/lib/pkgconfig/: assimp.pc
prebuilt/Windows/Release/cpp-httplib/lib/cmake/httplib/: httplibConfig.cmake  httplibConfigVersion.cmake  httplibTargets.cmake
prebuilt/Windows/Release/glad/include/glad/: gl.h  gles2.h
prebuilt/Windows/Release/glad/lib/: glad_gl.lib  glad_gles2.lib
prebuilt/Windows/Release/glad/lib/cmake/glad/: gladConfigVersion.cmake  gladTargets-release.cmake  gladTargets.cmake
prebuilt/Windows/Release/json/share/cmake/nlohmann_json/: nlohmann_jsonTargets.cmake
prebuilt/Windows/Release/json/share/pkgconfig/: nlohmann_json.pc
prebuilt/Windows/Release/lua/lib/: Lua.lib
prebuilt/Windows/Release/lua/lib/cmake/Lua/: LuaConfig.cmake  LuaConfigVersion.cmake  LuaTargets-release.cmake  LuaTargets.cmake
prebuilt/Windows/Release/luasocket/lib/: LuaSocket.lib
prebuilt/Windows/Release/luasocket/lib/cmake/LuaSocket/: LuaSocketConfig.cmake  LuaSocketTargets-release.cmake  LuaSocketTargets.cmake
prebuilt/Windows/Release/tinyxml2/lib/: tinyxml2.lib
prebuilt/Windows/Release/tinyxml2/lib/cmake/tinyxml2/: tinyxml2-static-targets-release.cmake  tinyxml2-static-targets.cmake
prebuilt/Windows/Release/tinyxml2/lib/pkgconfig/: tinyxml2.pc
source/glad/: CMakeLists.txt  Config.cmake.in
